@@ -1,5 +1,9 @@
 2003-07-04  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
 
+	* generic/tclCmdMZ.c (Tcl_StringObjCmd): Made [string map] accept
+	dictionaries for maps.  This is much trickier than it looks, since
+	map entry ordering is significant.  [Bug 759936]
+
 	* generic/tclVar.c (Tcl_ArrayObjCmd, TclArraySet): Made [array
 	get] and [array set] work with dictionaries, producing them and
 	consuming them.  Note that for compatability reasons, you will
